--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <script src="./js/main.js"></script>
         <header>
             Hello World! <br />
-            In Progress <br />
+            <div id="header">
+                Progress <br />
+            </div>
         </header>
         <nav>
 
