updating changes to html and css files

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
         <script src="./js/main.js"></script>
         <header>
             Hello World! <br />
-            <div id="header">
-                Progress <br />
-            </div>
+
         </header>
         <nav>
-
         </nav>
+        <main>
+            <div id="header">
+                Page in Progress <br />
+            </div>
+        </main>
         <footer>
             <p id="lastUpdate"></p>
         </footer>
