Updaing CSS and HTML

--- a/index.html
+++ b/index.html
@@ -18,16 +18,38 @@
         <![endif]-->
         <script src="./js/main.js"></script>
         <header>
-            Hello World! <br />
-            <div id="header">
-                Progress <br />
-            </div>
+            <nav>
+                <ul>
+                    <li><img src="https://unpkg.com/pixelarticons@1.8.1/svg/user.svg" /></li>
+                    <li>Citrix Engineer</li>
+                    <li>PowerShell Enthusiast</li>
+                    <li>Who Knows What Else...</li>
+                </ul>
+            </nav>
         </header>
-        <nav>
-        </nav>
         <main>
-            <div id="header">
+            <div>
                 Page in Progress <br />
+            </div>
+            <div style="display: flex; align-items: center; gap: 0.09em;">
+                <div>
+                    <ul style="text-align: left;">
+                        <li>Tristique lacus gravida volutpat fusce sapien integer congue taciti aptent.</li>
+                        <li>Tincidunt sed enim gravida ac nullam odio placerat viverra ligula.</li>
+                        <li>Primis faucibus mi magna fringilla nisl volutpat dui congue dictumst.</li>
+                        <li>Egestas arcu per curabitur dictum eu platea maecenas commodo amet.</li>
+                        <li>Imperdiet rutrum platea leo risus quisque nulla, hendrerit pretium ipsum.</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul style="text-align: left;">
+                        <li>Tristique lacus gravida volutpat fusce sapien integer congue taciti aptent.</li>
+                        <li>Tincidunt sed enim gravida ac nullam odio placerat viverra ligula.</li>
+                        <li>Primis faucibus mi magna fringilla nisl volutpat dui congue dictumst.</li>
+                        <li>Egestas arcu per curabitur dictum eu platea maecenas commodo amet.</li>
+                        <li>Imperdiet rutrum platea leo risus quisque nulla, hendrerit pretium ipsum.</li>
+                    </ul>
+                </div>
             </div>
         </main>
         <footer>
