--- a/index.html
+++ b/index.html
@@ -21,39 +21,84 @@
             <nav>
                 <ul>
                     <li><img src="https://unpkg.com/pixelarticons@1.8.1/svg/user.svg" /></li>
-                    <li>Citrix Engineer</li>
-                    <li>PowerShell Enthusiast</li>
-                    <li>Who Knows What Else...</li>
+                    <li>ABOUT</li>
+                    <li>
+                        <div style="font-size: smaller;">
+                            Self taught Systems Engineer with a track record of innovation and automation. There's so much more to do than troubleshoot tickets and field calls. Let's find a way to get some time back so we can get to the more important things! <br />
+                            Closing shut the jaws of Oblivion!
+                        </div>
+                    </li>
+                    <li> <hr> </li>
                 </ul>
             </nav>
         </header>
-        <main>
+        <main style="width: auto;">
             <div>
-                Page in Progress <br />
+                <h1>Daniel Lopez</h1>
+                <h6>
+                    PowerShell Enthusiast <br />
+                    Vibe Coder <br />
+                    Automatomator
+                </h6>
+            </div>
+            <div id="header">
+                Career &amp; Work History <br />
             </div>
             <div style="display: flex; align-items: center; gap: 0.09em;">
                 <div>
                     <ul style="text-align: left;">
-                        <li>Tristique lacus gravida volutpat fusce sapien integer congue taciti aptent.</li>
-                        <li>Tincidunt sed enim gravida ac nullam odio placerat viverra ligula.</li>
-                        <li>Primis faucibus mi magna fringilla nisl volutpat dui congue dictumst.</li>
-                        <li>Egestas arcu per curabitur dictum eu platea maecenas commodo amet.</li>
-                        <li>Imperdiet rutrum platea leo risus quisque nulla, hendrerit pretium ipsum.</li>
+                        <li>ISM, Inc.</li>
+                        <li>Giant Eagle</li>
+                        <li>Don Pablos</li>
+                        <li>UPMC Southside</li>
+                        <li>LANtek/All Lines Technology</li>
+                        <li>UPMC Passavant</li>
+                        <li>UPMC Corporate Services</li>
                     </ul>
                 </div>
+            </div>
+            <div id="header">
+                Education <br />
+            </div>
+            <div style="display: flex; align-items: center; gap: 0.09em;">
                 <div>
                     <ul style="text-align: left;">
-                        <li>Tristique lacus gravida volutpat fusce sapien integer congue taciti aptent.</li>
-                        <li>Tincidunt sed enim gravida ac nullam odio placerat viverra ligula.</li>
-                        <li>Primis faucibus mi magna fringilla nisl volutpat dui congue dictumst.</li>
-                        <li>Egestas arcu per curabitur dictum eu platea maecenas commodo amet.</li>
-                        <li>Imperdiet rutrum platea leo risus quisque nulla, hendrerit pretium ipsum.</li>
+                        <li>PS 233</li>
+                        <li>JHS 226</li>
+                        <li>Rivierview Jr./Sr. High School</li>
+                        <li>Forbes Vocational Technical Scool</li>
+                        <li>CCAC</li>
+                        <li>Self Taught</li>
+                    </ul>
+                </div>
+            </div>  
+            <div id="header">
+                Skills <br />
+            </div>
+            <div style="display: flex; align-items: center; gap: 0.09em;">
+                <div>
+                    <ul style="text-align: left;">
+                        <li>Thinking Outside the Box</li>
+                        <li>PowerShell</li>
+                        <li>Automation</li>
+                    </ul>
+                </div>
+            </div>
+            <div id="header">
+                Languages <br />
+            </div>
+            <div style="display: flex; align-items: center; gap: 0.09em;">
+                <div>
+                    <ul style="text-align: left;">
+                        <li>English</li>
+                        <li>Spanish</li>
+                        <li>American Sign Language</li>
                     </ul>
                 </div>
             </div>
         </main>
         <footer>
-            <p id="lastUpdate"></p>
+            <span class="display: flex;">Updated On: <p id="lastUpdate"></p> </span>
         </footer>
     </body>
     <script src="./js/main.js"></script>
