Tweaking the index , Adding info.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                         </div>
                     </li>
                     <li> <hr> </li>
+                    <li>WHAT'S THIS ALL FOR?</li>
+                    <li>
+                        <div style="font-size: smaller;">
+                            This entire thing is just me learning Github and relearning some basic web dev
+                        </div>
+                    </li>
                 </ul>
             </nav>
         </header>
